--- a/config.json
+++ b/config.json
@@ -1,7 +1,6 @@
 {
 "vanity":"ALINACAK URL",
 "sunucu": "SUNUCU ID",
-"botOwner": "BOTUN OWNER ID'Sİ",
-"urllog": "LOG KANALI ID'Sİ",
+"urlspammer": "LOG KANALI ID'Sİ",
 "token":"BOT TOKENİ"
 }
